# world-of-energy

./: .gitignore  Makefile  bibliography.json  config.json  contribution_conventions.md  dvc.yaml  index.html  index.json  introduction.json  markdown.json  markdown.resources.json  myst.search.json  myst.xref.json  notebooks.daily-jet-stream-animations.json  notebooks.earth-seasons.json  notebooks.germany-variations.json  notebooks.json  notebooks.load-seasonalities.json  notebooks.nao-index.json  notebooks.pressure-and-weather.json  notebooks.projections.json  notebooks.reconstruct-prices.json  notebooks.smard-de-prices.json  objects.inv  pyproject.toml  sitemap.xml
bibliography/: index.html
book/: myst.yml
introduction/: index.html
markdown/: index.html
notebooks/: index.html
pipeline/: 01_download_smard_DE_prices.py  01_download_smard_price_analysis_data.py  02_download_ttf_gas.py  02_smard_DE_prices.py  03_download_residual_load.py  03_smard_DE_prices.py  04_reconstruct_prices.py  04_smard_residual_load.py  05_load_seasonalities.py  06_download_smard_forecasts.py  06_srmc.py  07_dev_forecasts.py  07_download_baseload_and_capacities.py  08_dev_visualize_weather_data.py  08_reconstruct_prices.py  09_dev_sunlight.py  10_ee_seasons.py  11_dev_download_era5.py  11_dev_pressure_levels.py  11_download_era5_single_timestamp.py  12_dev_jet_stream.py  12_projections.py  13_download_monthly_era5.py  13_pressure_and_weather.py  14_nc_to_zarr.py  15_compute_germany_time_series.py  15_nc_to_zarr.py  16_compute_germany_time_series.py  16_dev_germany_weather.py  (+8 more)
(+31 files in other folders)
