[project]
name = "world-of-energy"
version = "0.1.0"
description = "Energy data analysis and visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "ipykernel>=7.1.0",
    "jupyter-book>=2.1.2",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "myst-nb>=1.3.0",
    "mystmd>=1.8.0",
    "numpy>=2.4.2",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["woe"]
